Fix home-stores article spacing

--- a/src/styles/pages/home-real/_home-stories.scss
+++ b/src/styles/pages/home-real/_home-stories.scss
@@ -120,6 +120,10 @@
         @include media-breakpoint-down(sm) {
           margin-top: rem(32);
         }
+
+        &:first-child {
+          margin-top: 0;
+        }
       }
     }
   }
